[package]
name = "tree_hash"
version = "0.5.2"
edition = "2021"
description = "Efficient Merkle-hashing as used in Ethereum consensus"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/tree_hash"
documentation = "https://docs.rs/tree_hash"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
ethereum-types = { version = "0.14.1", default-features = false }
ethereum_hashing = { version = "1.0.0-beta.2", default-features = false, features = ["zero_hash_cache"] }
smallvec = "1.6.1"
tree_hash_derive = { path = "../tree_hash_derive", version = "0.5.2" }

[dev-dependencies]
rand = "0.8.5"
ethereum_ssz = { git = "https://github.com/unionlabs/ethereum_ssz", branch = "vec-isnt-valid-ssz" }
ssz_types = { git = "https://github.com/unionlabs/ssz_types", branch = "try-from-instead-of-from" }

[features]
detect-cpufeatures = [
  "ethereum_hashing/detect-cpufeatures"
]
arbitrary = ["ethereum-types/arbitrary"]
